--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,5 +1,6 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
+@import './tarot-cards.css';
 
 @custom-variant dark (&:is(.dark *));
 
